# Minesweeper-SDL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
headers/: ltexture.h  minesweeper.h
sources/: ltexture.cpp  main.cpp  minesweeper.cpp
